<resources>
    <string name="app_name">DevFest SPB</string>
    <string name="headLine">Как мы ускоряем Яндекс под Android</string>
    <string name="tegAndroid">Android</string>
    <string name="author">Артур Василов</string>
    <string name="article">Многие Android-разработчики знают стандартные методы профилирования приложений,
        инструменты для отладки и улучшения производительности. Однако для случая больших приложений этого
        не всегда достаточно. Мы поговорим о нестандартных способах ускорения работы приложения, затронем самые
        разные аспекты, как вопросы UI, так и инструментов и околосерверных вещей. Я надеюсь, что этот доклад
        заставит вас посмотреть на вопросы производительности по-новому и подумать о том, что вы можете сделать
        в своем приложении.</string>
    <string name="allArticles">Все доклады</string>
</resources>
