<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headLine"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tegTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tegAndroid"
        android:layout_marginTop="16dp"
        android:background="@color/colorTeg"
        android:padding="8dp"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/author"
        android:textSize="18dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/articleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/article"
        android:textSize="16dp" />

    <Button
        android:id="@+id/allArticlesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAllArticles"
        android:padding="8dp"
        android:text="@string/allArticles"
        android:textColor="@android:color/background_light" />

</LinearLayout>